[package]
name = "borrowbot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitch-irc = "3.0.1"
tokio = { version = "1.12.0", features = ["full"] }
tokio-postgres = "0.7.3"
postgres-native-tls = "0.5.0"
chrono = "0.4.19"
reqwest = { version = "0.11.6", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
